updating read me to include the detail and citation about predownloaded data

--- a/CODE/DATA_datasetCompilation.ipynb
+++ b/CODE/DATA_datasetCompilation.ipynb
@@ -360,6 +360,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83cf6b96-616c-434c-b027-821a607038b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now we will load the remainder of watershed attributes in the dataset\n",
+    "\n",
+    "# Dataset 5: Land use (Falcone et al. 2017b)\n",
+    "LU74 = pd.read_csv(inputDataFilepath+'Dataset5_LandUse/LandUse_NWALT_1974.txt', sep=\",\", dtype={'STAID': str})\n",
+    "LU82 = pd.read_csv(inputDataFilepath+'Dataset5_LandUse/LandUse_NWALT_1982.txt', sep=\",\", dtype={'STAID': str})\n",
+    "LU92 = pd.read_csv(inputDataFilepath+'Dataset5_LandUse/LandUse_NWALT_1992.txt', sep=\",\", dtype={'STAID': str})\n",
+    "LU02 = pd.read_csv(inputDataFilepath+'Dataset5_LandUse/LandUse_NWALT_2002.txt', sep=\",\", dtype={'STAID': str})\n",
+    "LU12 = pd.read_csv(inputDataFilepath+'Dataset5_LandUse/LandUse_NWALT_2012.txt', sep=\",\", dtype={'STAID': str})\n",
+    "\n",
+    "# Dataset 6: NItrogen from fertilizer and livestock manure (Falcone et al. 2017b)\n",
+    "FERT = pd.read_csv(inputDataFilepath+'Dataset6_N-P_Fertilizer-Manure/N-P_Fertilizer_1987-2012.txt', sep=\",\", dtype={'STAID': str})\n",
+    "MANU = pd.read_csv(inputDataFilepath+'Dataset6_N-P_Fertilizer-Manure/N-P_Manure_1982-2012.txt', sep=\",\", dtype={'STAID': str})\n",
+    "\n",
+    "# Dataset 99: Aridity Index (Zomer and Trabucco 2022)\n",
+    "AI = pd.read_csv(inputDataFilepath+'Dataset99_AridityIndex/swt_AI.txt', sep=\",\", dtype={'STAID': str})"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8f7ba4f1-15b3-469d-b3aa-8013481a4bb7",
    "metadata": {},
@@ -403,7 +427,7 @@
    "id": "bc78807e-f50f-49d5-99aa-150cead1417c",
    "metadata": {},
    "source": [
-    "### Inorganic Nitrogen Concentration Data\n",
+    "### Dissolved Inorganic Nitrogen Concentration Data\n",
     "Now that we have the stations we will be using, we wnat to find which ones have nitrate concentration data and discharge data. We will start by pulling inorganic nitrogen concentration data because there are fewer stations with available data. "
    ]
   },
@@ -3472,7 +3496,7 @@
    "source": [
     "We see high flows going up to 200 mm/d. That's a lot, but it's not impossible if there was storm. Take the 2nd entry 'BLACKWOOD C NR TAHOE CITY CA', in 1997 there was a rain storm in January after snowpack in December was more than 180 percent it's normal magnitude. So, my gut says these values are OK.\n",
     "\n",
-    "The low values also look ok especially when we look at the states these low flows occur in -- they are all arid! "
+    "The low values also look ok especially when we look at the states these low flows occur in -- they are all arid regions! "
    ]
   },
   {
@@ -3488,15 +3512,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 1,
    "id": "d585e70b-48b7-451f-99e3-e13a4e121c6e",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m CQ_Data \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mmerge(MetricTable, DailyQData, on\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSite\u001b[39m\u001b[38;5;124m'\u001b[39m, how\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mouter\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      2\u001b[0m CQ_Data \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mmerge(CQ_Data, DailyWQData, on\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSite\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDate\u001b[39m\u001b[38;5;124m'\u001b[39m], how\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124minner\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      3\u001b[0m CQ_Data \u001b[38;5;241m=\u001b[39m CQ_Data[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSite\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mName\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mArea_SQKM\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHUC02\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLat\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLong\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSTATE\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHCDN-2009\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCLASS\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAGGECOREGION\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDate\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mQ_m3s\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mConc\u001b[39m\u001b[38;5;124m'\u001b[39m]]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
      ]
     }
    ],
@@ -3508,7 +3536,7 @@
     "# Let's make sure they merged correctly by checking for NaNs in flow and concentration. \n",
     "print(CQ_Data[['Q_m3s','Conc']].isnull().any().any())\n",
     "\n",
-    "CQ_Data.to_csv('../INPUTS/CQ_Data_20240602.txt',sep=',', index=False)"
+    "CQ_Data.to_csv(outputDataFilepath+'CQ_Data_20240602.txt',sep=',', index=False)"
    ]
   }
  ],
