fixed duplicate boxes in data code. generating DE plots

--- a/CODE/DATA_datasetCompilation.ipynb
+++ b/CODE/DATA_datasetCompilation.ipynb
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 60,
    "id": "fdd78797-43cc-495f-8c3a-3ba7129bc573",
    "metadata": {},
    "outputs": [
@@ -356,7 +356,7 @@
        "4 -68.157194    ME       NaN  Non-ref    NorthEast  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,380 +368,6 @@
     "                                          \"LAT_GAGE\": \"LAT\", \n",
     "                                          \"LNG_GAGE\": \"LONG\"})\n",
     "BasinData.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "id": "83cf6b96-616c-434c-b027-821a607038b1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>STAID</th>\n",
-       "      <th>NWALT74_DEV_SUM</th>\n",
-       "      <th>NWALT74_SEMIDEV_SUM</th>\n",
-       "      <th>NWALT74_AG4344_SUM</th>\n",
-       "      <th>NWALT74_AG4346_SUM</th>\n",
-       "      <th>NWALT74_11</th>\n",
-       "      <th>NWALT74_12</th>\n",
-       "      <th>NWALT74_21</th>\n",
-       "      <th>NWALT74_22</th>\n",
-       "      <th>NWALT74_23</th>\n",
-       "      <th>...</th>\n",
-       "      <th>NWALT74_31</th>\n",
-       "      <th>NWALT74_32</th>\n",
-       "      <th>NWALT74_33</th>\n",
-       "      <th>NWALT74_41</th>\n",
-       "      <th>NWALT74_43</th>\n",
-       "      <th>NWALT74_44</th>\n",
-       "      <th>NWALT74_45</th>\n",
-       "      <th>NWALT74_46</th>\n",
-       "      <th>NWALT74_50</th>\n",
-       "      <th>NWALT74_60</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>01011000</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>3.94</td>\n",
-       "      <td>0.79</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>94.93</td>\n",
-       "      <td>0.33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>01013500</td>\n",
-       "      <td>0.30</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>5.68</td>\n",
-       "      <td>5.72</td>\n",
-       "      <td>6.26</td>\n",
-       "      <td>1.86</td>\n",
-       "      <td>0.07</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>4.59</td>\n",
-       "      <td>1.09</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>84.85</td>\n",
-       "      <td>0.99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>01015800</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>2.16</td>\n",
-       "      <td>1.85</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.13</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>94.95</td>\n",
-       "      <td>0.82</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>01016500</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.13</td>\n",
-       "      <td>0.14</td>\n",
-       "      <td>0.96</td>\n",
-       "      <td>1.58</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>97.31</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>01017000</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.91</td>\n",
-       "      <td>1.93</td>\n",
-       "      <td>1.98</td>\n",
-       "      <td>1.72</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>1.44</td>\n",
-       "      <td>0.47</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>93.68</td>\n",
-       "      <td>0.51</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 24 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      STAID  NWALT74_DEV_SUM  NWALT74_SEMIDEV_SUM  NWALT74_AG4344_SUM  \\\n",
-       "0  01011000             0.00                 0.00                0.01   \n",
-       "1  01013500             0.30                 0.01                5.68   \n",
-       "2  01015800             0.05                 0.00                0.16   \n",
-       "3  01016500             0.00                 0.00                0.13   \n",
-       "4  01017000             0.16                 0.00                1.91   \n",
-       "\n",
-       "   NWALT74_AG4346_SUM  NWALT74_11  NWALT74_12  NWALT74_21  NWALT74_22  \\\n",
-       "0                0.01        3.94        0.79        0.00        0.00   \n",
-       "1                5.72        6.26        1.86        0.07        0.03   \n",
-       "2                0.16        2.16        1.85        0.04        0.00   \n",
-       "3                0.14        0.96        1.58        0.00        0.00   \n",
-       "4                1.93        1.98        1.72        0.05        0.01   \n",
-       "\n",
-       "   NWALT74_23  ...  NWALT74_31  NWALT74_32  NWALT74_33  NWALT74_41  \\\n",
-       "0        0.00  ...         0.0         0.0        0.00        0.00   \n",
-       "1        0.01  ...         0.0         0.0        0.01        0.01   \n",
-       "2        0.00  ...         0.0         0.0        0.00        0.00   \n",
-       "3        0.00  ...         0.0         0.0        0.00        0.00   \n",
-       "4        0.00  ...         0.0         0.0        0.00        0.01   \n",
-       "\n",
-       "   NWALT74_43  NWALT74_44  NWALT74_45  NWALT74_46  NWALT74_50  NWALT74_60  \n",
-       "0        0.01        0.00        0.00        0.00       94.93        0.33  \n",
-       "1        4.59        1.09        0.01        0.04       84.85        0.99  \n",
-       "2        0.13        0.03        0.00        0.00       94.95        0.82  \n",
-       "3        0.12        0.01        0.00        0.00       97.31        0.00  \n",
-       "4        1.44        0.47        0.01        0.02       93.68        0.51  \n",
-       "\n",
-       "[5 rows x 24 columns]"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Dataset 5: Land use (Falcone et al. 2017a)\n",
-    "rawLU74 = pd.read_csv(inputDataFilepath+'Dataset5_LandUse/LandUse_NWALT_1974.txt', sep=\",\", dtype={'STAID': str})\n",
-    "rawLU82 = pd.read_csv(inputDataFilepath+'Dataset5_LandUse/LandUse_NWALT_1982.txt', sep=\",\", dtype={'STAID': str})\n",
-    "rawLU92 = pd.read_csv(inputDataFilepath+'Dataset5_LandUse/LandUse_NWALT_1992.txt', sep=\",\", dtype={'STAID': str})\n",
-    "rawLU02 = pd.read_csv(inputDataFilepath+'Dataset5_LandUse/LandUse_NWALT_2002.txt', sep=\",\", dtype={'STAID': str})\n",
-    "rawLU12 = pd.read_csv(inputDataFilepath+'Dataset5_LandUse/LandUse_NWALT_2012.txt', sep=\",\", dtype={'STAID': str})\n",
-    "\n",
-    "# Let's take a look at the dataframes\n",
-    "rawLU74.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bca7a83d-183b-4412-8249-64406ac89ee6",
-   "metadata": {},
-   "source": [
-    "HINDSIGHT TIP: This is an example of 'wide' data. The date is included in the column name which results in five different textfiles to keep the number of columns within a managable number. It becomes cumberson to process each dataframe the same way. Had this data been 'long' format - a column for Site ID, Year, and land use category - it whave been very simple to join it to clean and join to other data. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 140,
-   "id": "cceaca27-6853-480d-8071-d3533925e5b3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# To avoid having repeating code, it's best just to use a function that can dynamically year with the year vector in the column names.\n",
-    "def NWALT_dataProcessing(df, year):\n",
-    "    # Set up column names with dynamic year\n",
-    "    colUrb = [f'NWALT{year}_DEV_SUM', f'NWALT{year}_SEMIDEV_SUM']\n",
-    "    colNat = [f'NWALT{year}_11', f'NWALT{year}_12', f'NWALT{year}_50', f'NWALT{year}_60']\n",
-    "    colAg = f'NWALT{year}_AG4346_SUM'\n",
-    "\n",
-    "    # Creating new categories\n",
-    "    df[f'NWALT{year}_DEV'] = df[colUrb].sum(axis=1)\n",
-    "    df[f'NWALT{year}_NAT'] = df[colNat].sum(axis=1)\n",
-    "\n",
-    "    # Keep only aggregated and agriculture LU columns\n",
-    "    export_df = df.filter([f'STAID', f'NWALT{year}_DEV', f'NWALT{year}_NAT', colAg])\n",
-    "\n",
-    "    # Rename the columns\n",
-    "    export_df = export_df.rename(columns={\n",
-    "        \"STAID\": \"SITE\",\n",
-    "        f'NWALT{year}_DEV': \"UrbLU_pct\",\n",
-    "        colAg: \"AgLU_pct\",\n",
-    "        f'NWALT{year}_NAT': \"NatLU_pct\"\n",
-    "    })\n",
-    "    return export_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
-   "id": "a395875d-33e6-4174-aecf-fe0e6cf09ec1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SITE</th>\n",
-       "      <th>UrbLU_pct</th>\n",
-       "      <th>NatLU_pct</th>\n",
-       "      <th>AgLU_pct</th>\n",
-       "      <th>YEAR</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>01011000</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>99.99</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>1974</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>01013500</td>\n",
-       "      <td>0.31</td>\n",
-       "      <td>93.96</td>\n",
-       "      <td>5.72</td>\n",
-       "      <td>1974</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>01015800</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>99.78</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>1974</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>01016500</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>99.85</td>\n",
-       "      <td>0.14</td>\n",
-       "      <td>1974</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>01017000</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>97.89</td>\n",
-       "      <td>1.93</td>\n",
-       "      <td>1974</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       SITE  UrbLU_pct  NatLU_pct  AgLU_pct  YEAR\n",
-       "0  01011000       0.00      99.99      0.01  1974\n",
-       "1  01013500       0.31      93.96      5.72  1974\n",
-       "2  01015800       0.05      99.78      0.16  1974\n",
-       "3  01016500       0.00      99.85      0.14  1974\n",
-       "4  01017000       0.16      97.89      1.93  1974"
-      ]
-     },
-     "execution_count": 141,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Processing the data and then joining the data\n",
-    "LU74 = NWALT_dataProcessing(rawLU74, '74')\n",
-    "LU74['YEAR'] = 1974\n",
-    "LU82 = NWALT_dataProcessing(rawLU82, '82')\n",
-    "LU82['YEAR'] = 1982\n",
-    "LU92 = NWALT_dataProcessing(rawLU92, '92')\n",
-    "LU92['YEAR'] = 1992\n",
-    "LU02 = NWALT_dataProcessing(rawLU02, '02')\n",
-    "LU02['YEAR'] = 2002\n",
-    "LU12 = NWALT_dataProcessing(rawLU12, '12')\n",
-    "LU12['YEAR'] = 2012\n",
-    "\n",
-    "LU = pd.concat([LU74, LU82, LU92, LU02, LU12])\n",
-    "LU.head()"
    ]
   },
   {
@@ -786,9 +412,7 @@
   {
    "cell_type": "markdown",
    "id": "bc78807e-f50f-49d5-99aa-150cead1417c",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Dissolved Inorganic Nitrogen Concentration Data\n",
     "Now that we have the stations we will be using, we wnat to find which ones have nitrate concentration data and discharge data. We will start by pulling inorganic nitrogen concentration data because there are fewer stations with available data. \n",
@@ -3071,7 +2695,6 @@
    "outputs": [],
    "source": [
     "# Now let's pull the data and organize the dataframe how we want it. \n",
-    "\n",
     "uniqSites = DailyWQData['Site'].unique()\n",
     "\n",
     "rawDailyQData_l = []\n",
@@ -3866,9 +3489,7 @@
   {
    "cell_type": "markdown",
    "id": "f3cad826-8259-40f5-a49b-1bb99cfad504",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Final words on concentration and flow data\n",
     "There might be other issues with the data. QAQC process never really ends, and you might find issues with the data down the line which makes you have to rerun your scripts. It's always important to keep a skeptical eye toward your data. But these first passes allow you to clean your dataset to a reasonable standard so you aren't working with junk.\n",
@@ -3902,7 +3523,7 @@
     "# Let's make sure they merged correctly by checking for NaNs in flow and concentration. \n",
     "print(CQ_Data[['Q_m3s','Conc']].isnull().any().any())\n",
     "\n",
-    "CQ_Data.to_csv(outputDataFilepath+'CQ_Data_20240602.txt',sep=',', index=False)"
+    "CQ_Data.to_csv(inputDataFilepath+'CQ_Data_20240602.txt',sep=',', index=False)"
    ]
   },
   {
@@ -4766,7 +4387,7 @@
     "### Filling missing data\n",
     "We don't have land use, manure or fertilizer data for every year of record. It's a good rule of thumb to try not to thin your dataset data, since we usually we want to maximize the available data. Since we want watershed attributes in every given year, we should gap fill our dataset. \n",
     "\n",
-    "There are a few options. We can simply use the mean, median, or mode. These are good if you have stationary data and don't  care about trends. Otherwise you can also interpolate from year to year for each site.\n",
+    "There are a few options. The simplest approach is to use the mean, median, or mode, which are good if you have stationary data and don't care about trends. Alternatively you can also interpolate from year to year for each site. There are much more complex ways to model missing data that are field specific (ex. LOADEST model), and I encourage you to look into those methods.\n",
     "\n",
     "We might also want to extrapolate beyond available years. Obviously this should be done with caution, but for this first step in data exploration we'll make the assumption that manure and fertilizer inputs don't drastically from year to year. For example, while livestock inventories fluctuate, annual livestock inventories are similar magnitude from year to year because of equipment/housing required for their rearing.  Let's Mean/ Mode/ Median Imputation"
    ]
@@ -5020,7 +4641,7 @@
     "       'HCDN-2009', 'CLASS', 'AGGECOREGION', 'UrbLU_pct', 'NatLU_pct', 'AgLU_pct', 'FERT_kgkm2',\n",
     "       'MANU_kgkm2', 'BFI_AVE', 'SLOPE_pct', 'AI',\n",
     "       'medianGWD_m', 'TD_pct']]\n",
-    "AttribTable.to_csv(outputDataFilepath+'WtshdAttributeTable_20240602.txt',sep=',', index=False)"
+    "AttribTable.to_csv(inputDataFilepath+'WtshdAttributeTable_20240602.txt',sep=',', index=False)"
    ]
   }
  ],
