--- a/CODE/DATA_datasetCompilation.ipynb
+++ b/CODE/DATA_datasetCompilation.ipynb
@@ -3539,7 +3539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 62,
    "id": "b11be8a1-5953-4beb-97e8-5ed2e9d75ccd",
    "metadata": {},
    "outputs": [
@@ -3745,7 +3745,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3772,7 +3772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 63,
    "id": "04df996c-6f81-44f0-9b26-dd9467119c98",
    "metadata": {},
    "outputs": [],
@@ -3803,7 +3803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 64,
    "id": "ea9f7c6c-5c45-49ba-99dd-9bc64b602428",
    "metadata": {},
    "outputs": [
@@ -3889,7 +3889,7 @@
        "4  01017000       0.16      97.89      1.93  1974"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3913,7 +3913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 65,
    "id": "612e6a5f-e22a-4b57-a190-aabd90b99449",
    "metadata": {},
    "outputs": [],
@@ -3958,7 +3958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 66,
    "id": "c92c6b28-6032-429d-9f2b-3faba6663edd",
    "metadata": {},
    "outputs": [
@@ -4116,7 +4116,7 @@
        "07126390  34.880  34.88  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4137,7 +4137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 67,
    "id": "6041e8eb-bb1a-41e1-9d49-4f0895861f8c",
    "metadata": {},
    "outputs": [
@@ -4242,7 +4242,7 @@
        "14201340  1987  2011     5501.2   9562.612  14438.4"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4265,7 +4265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 68,
    "id": "8fec4358-ee0e-4acf-b681-ad91562f1c54",
    "metadata": {},
    "outputs": [
@@ -4370,7 +4370,7 @@
        "06600300  1982  2011     6168.7   8579.933333  13588.5"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4394,7 +4394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 69,
    "id": "c691df3f-2dcd-483d-85ba-56d90aba2aaa",
    "metadata": {},
    "outputs": [],
@@ -4423,7 +4423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 70,
    "id": "6d1a7b8d-7840-4417-81da-bcf8c1a82bfc",
    "metadata": {},
    "outputs": [],
@@ -4463,116 +4463,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 71,
    "id": "256feeee-1070-4862-8f0b-67e44a13fde7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SITE</th>\n",
-       "      <th>YEAR</th>\n",
-       "      <th>UrbLU_pct</th>\n",
-       "      <th>NatLU_pct</th>\n",
-       "      <th>AgLU_pct</th>\n",
-       "      <th>FERT_kgkm2</th>\n",
-       "      <th>MANU_kgkm2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>362675</th>\n",
-       "      <td>402913084285400</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>3.77</td>\n",
-       "      <td>3.89</td>\n",
-       "      <td>92.34</td>\n",
-       "      <td>6042.9</td>\n",
-       "      <td>9305.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>362676</th>\n",
-       "      <td>402913084285400</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>3.77</td>\n",
-       "      <td>3.89</td>\n",
-       "      <td>92.34</td>\n",
-       "      <td>6042.9</td>\n",
-       "      <td>9305.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>362677</th>\n",
-       "      <td>402913084285400</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>3.77</td>\n",
-       "      <td>3.89</td>\n",
-       "      <td>92.34</td>\n",
-       "      <td>6042.9</td>\n",
-       "      <td>9305.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>362678</th>\n",
-       "      <td>402913084285400</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>3.77</td>\n",
-       "      <td>3.89</td>\n",
-       "      <td>92.34</td>\n",
-       "      <td>6042.9</td>\n",
-       "      <td>9305.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>362679</th>\n",
-       "      <td>402913084285400</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>3.77</td>\n",
-       "      <td>3.89</td>\n",
-       "      <td>92.34</td>\n",
-       "      <td>6042.9</td>\n",
-       "      <td>9305.9</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   SITE  YEAR  UrbLU_pct  NatLU_pct  AgLU_pct  FERT_kgkm2  \\\n",
-       "362675  402913084285400  2015       3.77       3.89     92.34      6042.9   \n",
-       "362676  402913084285400  2016       3.77       3.89     92.34      6042.9   \n",
-       "362677  402913084285400  2017       3.77       3.89     92.34      6042.9   \n",
-       "362678  402913084285400  2018       3.77       3.89     92.34      6042.9   \n",
-       "362679  402913084285400  2019       3.77       3.89     92.34      6042.9   \n",
-       "\n",
-       "        MANU_kgkm2  \n",
-       "362675      9305.9  \n",
-       "362676      9305.9  \n",
-       "362677      9305.9  \n",
-       "362678      9305.9  \n",
-       "362679      9305.9  "
-      ]
-     },
-     "execution_count": 151,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# After interpolating and extrapolating, let's combine the temporal datatogether. \n",
     "tAttTable = LU_ext.merge(FERT_ext, on=['SITE','YEAR'], how='left')\n",
@@ -4581,18 +4475,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 72,
    "id": "e32678ae-1c6b-446a-9fa9-2a65ea455817",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Let's go ahead and load and compile all the static datasets. \n",
     "# Dataset 19: Wastewater treatment plant (point source) density (Falcone et al. 2017b)\n",
-    "rawWWTP = pd.read_csv(inputDataFilepath+'Dataset19_PointSource/GAGE_WWTPDens_20240620.txt', sep=\",\", dtype={'SITE': str})\n",
+    "rawWWTP = pd.read_csv(inputDataFilepath+'Dataset99_PointSource/GAGE_WWTPDens_20240620.txt', sep=\",\", dtype={'SITE': str})\n",
     "\n",
     "# Dataset24: Baseflow index and slope data (Falcone et al. 2017b)\n",
-    "rawBFI = pd.read_csv(inputDataFilepath+'Dataset24_Static/GAGE_BFI_20240620.txt', sep=\",\", dtype={'SITE': str})\n",
-    "rawSLOPE = pd.read_csv(inputDataFilepath+'Dataset24_Static/GAGE_Slope_pct_20240620.txt', sep=\",\", dtype={'SITE': str})\n",
+    "rawBFI = pd.read_csv(inputDataFilepath+'Dataset99_Static/GAGE_BFI_20240620.txt', sep=\",\", dtype={'SITE': str})\n",
+    "rawSLOPE = pd.read_csv(inputDataFilepath+'Dataset99_Static/GAGE_Slope_pct_20240620.txt', sep=\",\", dtype={'SITE': str})\n",
     "\n",
     "# Dataset 99: Aridity Index (Zomer and Trabucco 2022)\n",
     "rawAI = pd.read_csv(inputDataFilepath+'Dataset99_AridityIndex/GAGE_AI_20240620.txt', sep=\",\", dtype={'SITE': str})\n",
@@ -4606,7 +4500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 80,
    "id": "f7630769-9d7a-434c-8f16-8beb84cb5a61",
    "metadata": {},
    "outputs": [],
@@ -4618,7 +4512,8 @@
     "GWD = rawGWD.filter(['SITE','medianGWD_m'])\n",
     "TD = rawTD.filter(['SITE','TD_pct'])\n",
     "\n",
-    "sAttTable = BasinData.merge(BFI, on='SITE', how='left')\n",
+    "SITE = BasinData.filter(['SITE'])\n",
+    "sAttTable = SITE.merge(BFI, on='SITE', how='left')\n",
     "sAttTable = sAttTable.merge(SLOPE, on='SITE', how='left')\n",
     "sAttTable = sAttTable.merge(AI, on='SITE', how='left')\n",
     "sAttTable = sAttTable.merge(GWD, on='SITE', how='left')\n",
@@ -4627,7 +4522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 83,
    "id": "133850f9-37b2-4ff4-9550-84c04a435420",
    "metadata": {},
    "outputs": [],
@@ -4637,8 +4532,7 @@
     "AttribTable =  tAttTable.merge(sAttTable, on=['SITE'], how='left')\n",
     "\n",
     "# Now to rearrange the columns in the order I prefer. \n",
-    "AttribTable = AttribTable[['SITE', 'YEAR', 'NAME',  'LAT', 'LONG', 'STATE', 'AREA_SQKM', 'HUC02',\n",
-    "       'HCDN-2009', 'CLASS', 'AGGECOREGION', 'UrbLU_pct', 'NatLU_pct', 'AgLU_pct', 'FERT_kgkm2',\n",
+    "AttribTable = AttribTable[['SITE', 'YEAR', 'UrbLU_pct', 'NatLU_pct', 'AgLU_pct', 'FERT_kgkm2',\n",
     "       'MANU_kgkm2', 'BFI_AVE', 'SLOPE_pct', 'AI',\n",
     "       'medianGWD_m', 'TD_pct']]\n",
     "AttribTable.to_csv(inputDataFilepath+'WtshdAttributeTable_20240602.txt',sep=',', index=False)"
