updatnig DE workshop

--- a/CODE/DATA_datasetCompilation.ipynb
+++ b/CODE/DATA_datasetCompilation.ipynb
@@ -213,7 +213,7 @@
    ],
    "source": [
     "BasinData = pd.read_csv(inputDataFilepath+'Dataset1_BasinID/BasinID.txt', sep=\",\", dtype={'STAID': str})\n",
-    "\n",
+    "BasinData.drop(columns='HCDN-2009', inplace=True)\n",
     "# Always useful to check your data. In this case, it's important to note that 'STAID' need to be read as strings because of their leading '0's. \n",
     "BasinData.head()"
    ]
@@ -4028,7 +4028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 314,
    "id": "d585e70b-48b7-451f-99e3-e13a4e121c6e",
    "metadata": {},
    "outputs": [
@@ -4043,7 +4043,7 @@
    "source": [
     "CQ_Data = pd.merge(BasinData, DailyQData, on='SITE', how='outer')\n",
     "CQ_Data = pd.merge(CQ_Data, DailyWQData, on=['SITE','DATE'], how='inner')\n",
-    "CQ_Data = CQ_Data[['SITE', 'NAME', 'AREA_SQKM', 'HUC02','LAT','LONG','STATE','HCDN-2009','CLASS','AGGECOREGION', 'DATE', 'Q_m3s', 'Conc']]\n",
+    "CQ_Data = CQ_Data[['SITE', 'NAME', 'AREA_SQKM', 'HUC02','LAT','LONG','STATE','CLASS','AGGECOREGION', 'DATE', 'Q_m3s', 'Conc']]\n",
     "\n",
     "# Adding a Year and month columns\n",
     "CQ_Data['YEAR'] = pd.DatetimeIndex(CQ_Data['DATE']).year\n",
