--- a/CODE/ANA_dataExploration.ipynb
+++ b/CODE/ANA_dataExploration.ipynb
@@ -31,7 +31,6 @@
     "import geopandas as gpd\n",
     "from sklearn.linear_model import LinearRegression\n",
     "import os\n",
-    "os.environ[\"OMP_NUM_THREADS\"] = \"11\"\n",
     "from sklearn.cluster import KMeans\n",
     "from sklearn.metrics import silhouette_score\n",
     "import matplotlib.cm as cm\n",
@@ -75,7 +74,7 @@
    "metadata": {},
    "source": [
     "## Exploring Concentration-Discharge Relationships\n",
-    "Today we will be looking at nnitrogen concentration (C) and discharge (Q). The relationship between solute and discharge have been explored extensively because they are useful to understand the underlying drivers of catchment export dynamics and are valuable for interpreting the processes driving export patterns of solutes.\n",
+    "Today we will be looking at nitrogen concentration (C) and discharge (Q). The relationship between solute and discharge have been explored extensively because they are useful to understand the underlying drivers of catchment export dynamics and are valuable for interpreting the processes driving export patterns of solutes.\n",
     "\n",
     "Different typologies of CQ relationships provide integrated signals of processes hapenning within the catchment. \n",
     "\n",
@@ -782,6 +781,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function to normalize the data. First we will cap some of the data, then we will use linear scaling to put all the data between [0,1]\n",
     "def linearNormalization(data, feature, min_val=None, max_val=None):\n",
     "    if min_val is not None:\n",
     "        data[feature] = np.maximum(data[feature], min_val)\n",
@@ -818,6 +818,7 @@
     "    'b':2}\n",
     "min_values = {'b':-2}\n",
     "\n",
+    "# Normalizing the data\n",
     "for feature in attributes:\n",
     "    minVal = min_values.get(feature)\n",
     "    maxVal = max_values.get(feature)\n",
@@ -853,6 +854,7 @@
     "    kmeans.fit(kMeans_data)\n",
     "    sse.append(kmeans.inertia_)\n",
     "\n",
+    "# Plotting the hyperparameter tuning error results\n",
     "plt.figure(figsize=(4, 4))\n",
     "plt.plot(range(1, 11, 1), sse, marker='o')\n",
     "plt.xlabel('Number of clusters')\n",
@@ -877,6 +879,8 @@
     "CQ_attrib['Cluster'] = kmeans.labels_\n",
     "def cust_mode(series):\n",
     "    return series.mode().iloc[0] if not series.mode().empty else np.nan\n",
+    "\n",
+    "# Let's groupby the method based on site. We will take the MODE of the cluster for each site because it's a categorical data. \n",
     "CQ_attrib_modeClust = CQ_attrib.groupby('SITE').agg({'logAREA_SQKM':'first', \n",
     "                                            'HUC02':'first', \n",
     "                                            'Q_m3s':'mean',\n",
